tests/snapshots/run_file__def_num_bool.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/def_num_bool.bend
---
[4m[1m[31mErrors:[0m
[1mIn definition '[4mgo[0m[1m':[0m
  Non-exhaustive pattern matching rule. Default case of number type not covered.
