tests/snapshots/run_file__def_tups.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/def_tups.bend
---
NumScott:
15

Scott:
15
