tests/snapshots/run_file__def_tups.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/def_tups.hvm
---
Strict mode:

Result: 15
- ITRS: 19
- TIME: 0.00s
- MIPS: 8.24
