tests/snapshots/run_file__do_block_mixed.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/do_block_mixed.bend
---
NumScott:
λa (a Result/Ok/tag 1)

Scott:
λa λ* (a 1)
