tests/snapshots/run_file__do_block_mixed.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/do_block_mixed.hvm
---
λa λ* (a 1)
