tests/snapshots/run_file__dup_global_lam.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/dup_global_lam.bend
---
NumScott:
λa a

Scott:
λa a
