tests/snapshots/run_file__dup_global_lam.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/dup_global_lam.hvm
---
λa a
