tests/snapshots/run_file__empty.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/empty.bend
---
[4m[1m[31mErrors:[0m
[1mDuring execution :[0m
File has no 'main' definition.
