tests/snapshots/run_file__empty.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/empty.hvm
---
Strict mode:
Errors:
File has no 'main' definition.
