tests/snapshots/run_file__encode_decode_utf8.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/encode_decode_utf8.bend
---
NumScott:
([72, 101, 108, 108, 111, 44, 32, 228, 184, 150, 231, 149, 140, 33], "Hello, 世界!")

Scott:
([72, 101, 108, 108, 111, 44, 32, 228, 184, 150, 231, 149, 140, 33], "Hello, 世界!")
