tests/snapshots/run_file__erased_side_effect.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/erased_side_effect.bend
---
NumScott:
123

Scott:
123
